# linalg

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile.in
include/: matrix.h
source/: matrix.cpp
